--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h1>I AM GOD</h1>
+<p>also please visit https://htmlreference.io/ https://fmhy.net/devtools#html and https://github.com/codexll0/mediaweb for information thanks <3</p>
