--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-<h1>I AM GOD</h1>
+<!DOCTYPE html>
+<html>
+<header></header>
+<h1>I AM GOD</h1> </header>
 <p>also please visit https://htmlreference.io/ https://fmhy.net/devtools#html and https://github.com/codexll0/mediaweb for information thanks <3</p>
+<body>i hate html</body>
+</html>
