--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-<header></header>
-<h1>I AM GOD</h1> </header>
+<header>
+ <h1>I AM GOD</h1>
+ <style media="screen" type="text/css">
+ h1 {
+ color: red;
+ background-color: black;
+ </style>
+</header>
 <p>also please visit https://htmlreference.io/ https://fmhy.net/devtools#html and https://github.com/codexll0/mediaweb for information thanks <3</p>
-<body>i hate html</body>
+<img src="https://placebear.com/g/200/300" alt="bear">
 </html>
