Update index.html (bug)

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <header>
  <h1>I AM GOD</h1>
- <style media="screen" type="text/css">
- <link rel="stylesheet" type="text/css" href="style.css" media=”screen"/>
+ <link rel="stylesheet" type="text/css" href="style.css"
+ media=”screen"/>
 </header>
 <p>also please visit <link rel="next" type="text/html" href="https://htmlreference.io/"> <link rel="next" type="text/html" href="https://fmhy.net/devtools#html"> and 
 <link rel="next" type="text/html" href="https://github.com/codexll0/mediaweb"> for information thanks <3</p>
