--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <header>
  <h1>I AM GOD</h1>
  <style media="screen" type="text/css">
- <link rel="stylesheet" type="text/css" href="style.css" media=”screen"/>
+ h1 {
+ color: red;
+ background-color: black;
+ </style>
 </header>
-<p>also please visit <link rel="next" type="text/html" href="https://htmlreference.io/"> <link rel="next" type="text/html" href="https://fmhy.net/devtools#html"> and 
-<link rel="next" type="text/html" href="https://github.com/codexll0/mediaweb"> for information thanks <3</p>
+<p>also please visit https://htmlreference.io/ https://fmhy.net/devtools#html and https://github.com/codexll0/mediaweb for information thanks <3</p>
 <img src="https://placebear.com/g/200/300" alt="bear">
 </html>
