--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <header>
- <h1>I AM GOD</h1>
+ <h1> <b>I AM GOD</b> </h1>
  <style media="screen" type="text/css">
  h1 {
  color: red;
  background-color: black;
  </style>
 </header>
-<p>also please visit https://htmlreference.io/ https://fmhy.net/devtools#html and https://github.com/codexll0/mediaweb for information thanks <3</p>
+<body>
+ <h3> Test Header </p>
+ <p>also please visit <a href="https://htmlreference.io">HTML Reference</a> <a href="https://fmhy.net/devtools#html">Other HTML Resources</a> and <a href="https://github.com/codexll0/mediaweb">GitHub Page</a> for information thanks <3</p>
+</body>
+<h4> some other tests <h4>
 <img src="https://placebear.com/g/200/300" alt="bear">
+<video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" controls autoplay</video>
 </html>
