Add "lang=en" to html value and try to fix video tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <header>
  <h1> <b>I AM GOD</b> </h1>
  <style media="screen" type="text/css">
@@ -14,5 +14,5 @@
 </body>
 <h4> some other tests <h4>
 <img src="https://placebear.com/g/200/300" alt="bear">
-<video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" controls autoplay</video>
+<video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" controls autoplay></video>
 </html>
