--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <h1> <b>I AM GOD</b> </h1>
  <style media="screen" type="text/css">
  h1 {
- color: red;
+ color: blue;
  background-color: black;
  </style>
 </header>
