update: body, cleaned up code, made it more readable

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+ 
 <header>
  <h1> <b>I AM GOD</b> </h1>
  <style media="screen" type="text/css">
@@ -8,11 +9,19 @@
  background-color: black;
  </style>
 </header>
+ 
 <body>
  <h3> Test Header </p>
- <p>also please visit <a href="https://htmlreference.io">HTML Reference</a> <a href="https://fmhy.net/devtools#html">Other HTML Resources</a> and <a href="https://github.com/codexll0/mediaweb">GitHub Page</a> for information thanks <3</p>
+  <nav>
+   <p>also please visit
+    <a href="https://htmlreference.io">HTML Reference</a>,
+    <a href="https://fmhy.net/devtools#html">Other HTML Resources</a> and
+    <a href="https://github.com/codexll0/mediaweb">GitHuB Repository</a> for more information thanks <3
+   </p>
+  </nav>
 </body>
-<h4> some other tests <h4>
-<img src="https://placebear.com/g/200/300" alt="bear">
-<video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" controls autoplay></video>
+ 
+<h4> some other tests and media <h4>
+ <img src="https://placebear.com/g/200/300" alt="bear">
+ <video src="https://www.youtube.com/watch?v=TRg94OCjx3Y" controls autoplay muted></video>
 </html>
