Added /content/copyright, removed angelo.html, updated index.html

--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
  
-<header>
+<head>
  <h1> <b>I AM GOD</b> </h1>
- <style media="screen" type="text/css">
- h1 {
- color: blue;
- background-color: black;
- </style>
-</header>
+  <style type="text/css">
+   h1 {
+   color: red;
+   background-color: black;
+  </style>
+</head>
  
-<body>
- <h3> Test Header </p>
-  <nav>
-   <p>also please visit
+<article>
+ <h3>Test Header </p>
+  <nav>also please visit
     <a href="https://htmlreference.io">HTML Reference</a>,
     <a href="https://fmhy.net/devtools#html">Other HTML Resources</a> and
-    <a href="https://github.com/codexll0/mediaweb">GitHuB Repository</a> for more information thanks <3
-   </p>
+    <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a> for more information thanks <3
   </nav>
-</body>
+</article>
  
-<h4> some other tests and media <h4>
+<h4>some other tests and media <h4>
  <img src="https://placebear.com/g/200/300" alt="bear">
  <video src="https://www.youtube.com/watch?v=TRg94OCjx3Y" controls autoplay muted></video>
+ 
+<footer>
+ <a href="https://creativecommons.org/licenses/by/4.0/legalcode.en">Licensed "CC-BY-4.0"</a>
+ <a href="https://codexll0.github.io/mediaweb/content/copyright/">Copyright</a>
+</footer>
+
 </html>
