--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
  
 <article>
- <h3>Test Header </p>
+ <h3>Test Header</p>
   <nav>also please visit
     <a href="https://htmlreference.io">HTML Reference</a>,
     <a href="https://fmhy.net/devtools#html">Other HTML Resources</a> and
@@ -19,9 +19,9 @@
   </nav>
 </article>
  
-<h4>some other tests and media <h4>
+<h4>some other tests and media<h4>
  <img src="https://placebear.com/g/200/300" alt="bear">
- <video src="https://www.youtube.com/watch?v=TRg94OCjx3Y" controls autoplay muted></video>
+ <video src="https://youtu.be/NLZRYQMLDW4" controls autoplay muted></video>
  
 <footer>
  <a href="https://creativecommons.org/licenses/by/4.0/legalcode.en">Licensed "CC-BY-4.0"</a>
