Completely revamped index.html, added style.css and fix /content/copyright/index.html

--- a/content/copyright/index.html
+++ b/content/copyright/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 
+<title>Copyright</title>
+
 <head>
- <title>Copyright: <small>pls dont sue us</small>
- </title>
+ <h1>Copyright Information</h1>
 </head>
 
 <body>
  <a href="https://creativecommons.org/licenses/by/4.0/legalcode.en">
-  <h1>Licensed by "CC-BY-4.0"
-  </h6>
+  <h3>Licensed by "CC-BY-4.0"
+  </h3>
  </a>
 </body>
 
