--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<title>Homepage</title>
  
-<head>
- <h1> <b>I AM GOD</b> </h1>
-  <style type="text/css">
-   h1 {
-   color: red;
-   background-color: black;
-  </style>
+<head id="homepage">
+  <h1> <b>Welcome!</b> </h1>
+   <p>This is the <strong>Group 2's Project Main Page!</strong> Feel free to navigate to links and resources that you may need. </p>
+   <p>Please contribute <strong>mainly</strong> on the <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a> and be open to fixing writing errors or other problems. </p>
 </head>
  
 <article>
- <h3>Test Header </p>
-  <nav>also please visit
-    <a href="https://htmlreference.io">HTML Reference</a>,
-    <a href="https://fmhy.net/devtools#html">Other HTML Resources</a> and
-    <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a> for more information thanks <3
+ <h3>Resources</h3>
+  <nav>
+    <a href="https://learn.shayhowe.com/">Learn HTML</a>
+    <a href="https://htmlreference.io">HTML Cheatsheet</a>,
+    <a href="https://fmhy.net/devtools#html">Other HTML Resources</a>
+    <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a>
   </nav>
 </article>
  
-<h4>some other tests and media <h4>
+<h3>Tests and Media </h3>
  <img src="https://placebear.com/g/200/300" alt="bear">
- <video src="https://www.youtube.com/watch?v=TRg94OCjx3Y" controls autoplay muted></video>
  
 <footer>
+ <h3>Copyright and License</h3>
  <a href="https://creativecommons.org/licenses/by/4.0/legalcode.en">Licensed "CC-BY-4.0"</a>
  <a href="https://codexll0.github.io/mediaweb/content/copyright/">Copyright</a>
 </footer>
