update: style.css is bugged, updated index.html, added /renz/index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>Homepage</title>
- 
-<head id="homepage">
-  <h1> <b>Welcome!</b> </h1>
-   <p>This is the <strong>Group 2's Project Main Page!</strong> Feel free to navigate to links and resources that you may need. </p>
-   <p>Please contribute <strong>mainly</strong> on the <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a> and be open to fixing writing errors or other problems. </p>
+<head class="test">
+ <title>Homepage</title>
 </head>
+
+<body>
+ <h1> <b>Welcome!</b> </h1>
+  <p>This is the <strong>Group 2's Project Main Page!</strong> Feel free to navigate to links and resources that you may need. </p>
+  <p>Please contribute <strong>mainly</strong> on the <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a> and be open to fixing writing errors or other problems. </p>
+</body>
  
 <article>
  <h3>Resources</h3>
@@ -18,9 +20,11 @@
     <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a>
   </nav>
 </article>
- 
+
+<div class="test">
 <h3>Tests and Media </h3>
- <img src="https://placebear.com/g/200/300" alt="bear">
+ <img src="https://pbs.twimg.com/media/GTQ80kaX0AAJH-7?format=jpg&name=large" alt="akolibed">
+</div>
  
 <footer>
  <h3>Copyright and License</h3>
