troubleshooted safe mode + developed htyml, .css

--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head class="test">
+<head>
  <title>Homepage</title>
+ <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
- <h1> <b>Welcome!</b> </h1>
-  <p>This is the <strong>Group 2's Project Main Page!</strong> Feel free to navigate to links and resources that you may need. </p>
-  <p>Please contribute <strong>mainly</strong> on the <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a> and be open to fixing writing errors or other problems. </p>
+ <h1 class="homepagetext"> <b>Welcome!</b> </h1>
+  <p class="homepagebody">This is the <strong>Group 2's Project Main Page!</strong> Feel free to navigate to links and resources that you may need. </p>
+  <p class="homepagebody">Please contribute mainly on the <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a> and be open to fixing writing errors or other problems. </p>
 </body>
- 
-<article>
+
+<body>
+ <h1 class="aboutustext">About Us!</h1>
+  <p class="aboutusbody">We at Grade 9 Media Arts who share a passion for technology and being creative! We here always open to </p>
+  <p class="aboutusbody"> improve our skills and interests together to learn and improve our skills in the field!</p>
+  
+  <p class="aboutusbodyalt">As a Media Art student, we use our camera's to capture moments of people, document, film and to express</p>
+  <p class="aboutusbodalty">our thoughts towards media. It inspires us to continue going and to be consistent. We dedicate time towards </p>
+  <p class "aboutusbodyalt"> media and are committed to pursue a sucessful carrer.</p>
+</body>
+
+<body>
  <h3>Resources</h3>
   <nav>
-    <a href="https://learn.shayhowe.com/">Learn HTML</a>
-    <a href="https://htmlreference.io">HTML Cheatsheet</a>,
-    <a href="https://fmhy.net/devtools#html">Other HTML Resources</a>
+    <a href="https://learn.shayhowe.com/">Learn HTML</a> /
+    <a href="https://htmlreference.io">HTML Cheatsheet</a> /
+    <a href="https://fmhy.net/devtools#html">Other HTML Resources</a> /
     <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a>
   </nav>
-</article>
-
-<div class="test">
-<h3>Tests and Media </h3>
- <img src="https://pbs.twimg.com/media/GTQ80kaX0AAJH-7?format=jpg&name=large" alt="akolibed">
-</div>
+</body>
  
-<footer>
- <h3>Copyright and License</h3>
- <a href="https://creativecommons.org/licenses/by/4.0/legalcode.en">Licensed "CC-BY-4.0"</a>
- <a href="https://codexll0.github.io/mediaweb/content/copyright/">Copyright</a>
+<footer class="footing">
+ <h3>Copyright and License Information</h3>
+ <a href="https://codexll0.github.io/mediaweb/content/copyright/">Copyright</a> /
+ <a href="https://creativecommons.org/licenses/by/4.0/legalcode.en">Licensed with "CC-BY-4.0"</a>
 </footer>
 
 </html>
