update index.html - bugfix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p class="aboutusbody"> improve our skills and interests together to learn and improve our skills in the field!</p>
   
   <p class="aboutusbodyalt">As a Media Art student, we use our camera's to capture moments of people, document, film and to express</p>
-  <p class="aboutusbodalty">our thoughts towards media. It inspires us to continue going and to be consistent. We dedicate time towards </p>
+  <p class="aboutusbodalt">our thoughts towards media. It inspires us to continue going and to be consistent. We dedicate time towards </p>
   <p class "aboutusbodyalt"> media and are committed to pursue a sucessful carrer.</p>
 </body>
 
