complete overhaul : renamed renz to owen, added photos, updated copyright, index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="background">
 
 <head>
  <title>Homepage</title>
@@ -7,24 +7,28 @@
 </head>
 
 <body>
- <h1 class="homepagetext"> <b>Welcome!</b> </h1>
-  <p class="homepagebody">This is the <strong>Group 2's Project Main Page!</strong> Feel free to navigate to links and resources that you may need. </p>
-  <p class="homepagebody">Please contribute mainly on the <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a> and be open to fixing writing errors or other problems. </p>
+ <h1 class="homepagetext">Welcome!</h1>
+  <p class="homepagebody">This is the <strong>Group 2's Project Main Page!</strong> Feel free to navigate to links and resources that you may need. Please contribute mainly on the <a href="https://github.com/codexll0/mediaweb">GitHub Repository</a> and be open to fixing writing errors or other problems. </p>
 </body>
 
 <body>
  <h1 class="aboutustext">About Us!</h1>
-  <p class="aboutusbody">We at Grade 9 Media Arts who share a passion for technology and being creative! We here always open to </p>
-  <p class="aboutusbody"> improve our skills and interests together to learn and improve our skills in the field!</p>
+  <p class="aboutusbody">We at Grade 9 Media Arts who share a passion for technology and being creative! We here always open to improve our skills and interests together to learn and improve our skills in the field!</p>
   
-  <p class="aboutusbodyalt">As a Media Art student, we use our camera's to capture moments of people, document, film and to express</p>
-  <p class="aboutusbodalt">our thoughts towards media. It inspires us to continue going and to be consistent. We dedicate time towards </p>
-  <p class "aboutusbodyalt"> media and are committed to pursue a sucessful carrer.</p>
+  <p class="aboutusbody">As a Media Art student, we use our camera's to capture moments of people, document, film and to express our thoughts towards media. It inspires us to continue going and to be consistent. We dedicate time towards media and are committed to pursue a sucessful carrer.</p>
+  
+  <nav class="aboutuslinks">
+   <a href="https://codexll0.github.io/mediaweb/content/owen">About Owen</a> /
+   <a href="https://codexll0.github.io/mediaweb/content/esterly/">About Esterly</a> /
+   <a href="https://codexll0.github.io/mediaweb/content/josh">About Josh</a> /
+   <a href="https://codexll0.github.io/mediaweb/content/archie">About Archie</a> /
+   <a href="https://codexll0.github.io/mediaweb/content/sebastian">About Basty</a>
+  </nav>
 </body>
 
 <body>
- <h3>Resources</h3>
-  <nav>
+ <h1 class="resources">Resources</h1>
+  <nav class="resourcestext">
     <a href="https://learn.shayhowe.com/">Learn HTML</a> /
     <a href="https://htmlreference.io">HTML Cheatsheet</a> /
     <a href="https://fmhy.net/devtools#html">Other HTML Resources</a> /
@@ -32,10 +36,12 @@
   </nav>
 </body>
  
-<footer class="footing">
- <h3>Copyright and License Information</h3>
- <a href="https://codexll0.github.io/mediaweb/content/copyright/">Copyright</a> /
- <a href="https://creativecommons.org/licenses/by/4.0/legalcode.en">Licensed with "CC-BY-4.0"</a>
+<footer>
+ <h1 class="footing">Copyright and License Information</h1>
+  <nav class = "cl">
+   <a href="https://codexll0.github.io/mediaweb/content/copyright/">Copyright</a> /
+   <a href="https://creativecommons.org/licenses/by/4.0/legalcode.en">Licensed with "CC-BY-4.0"</a>
+  </nav>
 </footer>
 
 </html>
