--- a/content/copyright/index.html
+++ b/content/copyright/index.html
@@ -7,13 +7,11 @@
  <h1>Copyright Information</h1>
 </head>
 
-<article>
+<body>
  <p>This website is hosted on <a href="https://pages.github.com/">Github Pages</a>
  <a href="https://creativecommons.org/licenses/by/4.0/legalcode.en">
   <h3>Licensed by "CC-BY-4.0"</h3>
  </a>
-</article>
-
-<
+</body>
 
 </html>
